# src/api/src/models/round.ts
@@ -2,7 +2,6 @@ import mongoose, { Schema } from "mongoose";
 
 export interface RoundData {
   name: string;
-  roundId: string;
   editId: string; // This differentiation might only need to exist in the backend
   created: Date;
   answers: UserResponse[];
@@ -18,8 +17,7 @@ export interface User {
 }
 
 export interface UserResponse {
-  userId: string;
-  isAnonymous: boolean;
+  userName: string;
   answers: Answer;
 }
 export interface Answer {
